# v-quansenwen_26_01_19_case2

./: API.md  Claude-Opus-4.5.txt  Claude-sonnet-4.5.txt  README.md  final_prompt.txt  gpt-5.1-codex-max.txt  oswe-large-m5a1s120-low.txt  pyproject.toml
examples/: policy.json
src/policyeval/: __init__.py  cli.py  context.py  engine.py  errors.py  loader.py  registry.py  rules.py  utils.py
src/policyeval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_engine.py  test_loader.py
