[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policyeval"
version = "0.6.0"
description = "Configuration-driven policy evaluation engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "PolicyEval Contributors"}]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
policyeval = "policyeval.cli:main"
